2006-01-20  Timothy Hatcher  <timothy@apple.com>

        Reviewed by John.

        Removes code that is no longer needed with the new Web Inspector.

        * bridge/mac/WebCoreFrameBridge.h: removes the WebCoreDOMTreeCopier protocol.
        * bridge/mac/WebCoreFrameBridge.mm: removes copyDOMNode:copier:

2006-01-21  Anders Carlsson  <andersca@mac.com>

        Reviewed by David Hyatt.

        Rename Frame::xmlDocImpl => Frame::document and
        Frame::replaceDocImpl => Frame::setDocument
        
        * bridge/mac/MacFrame.mm:
        (MacFrame::findString):
        (MacFrame::advanceToNextMisspelling):
        (MacFrame::nextKeyViewInFrame):
        (MacFrame::nextKeyViewInFrameHierarchy):
        (MacFrame::keyEvent):
        (MacFrame::dispatchCPPEvent):
        (MacFrame::setDisplaysWithFocusAttributes):
        (MacFrame::bodyBackgroundColor):
        (MacFrame::markMisspellings):
        (MacFrame::respondToChangedSelection):
        (MacFrame::setMarkedTextRange):
        (MacFrame::dashboardRegionsDictionary):
        (MacFrame::shouldClose):
        * bridge/mac/WebCoreFrameBridge.mm:
        (updateRenderingForBindings):
        (frameHasSelection):
        (-[WebCoreFrameBridge addData:]):
        (-[WebCoreFrameBridge didNotOpenURL:pageCache:]):
        (-[WebCoreFrameBridge saveDocumentState]):
        (-[WebCoreFrameBridge restoreDocumentState]):
        (-[WebCoreFrameBridge saveDocumentToPageCache]):
        (-[WebCoreFrameBridge _documentTypeString]):
        (-[WebCoreFrameBridge deselectAll]):
        (-[WebCoreFrameBridge reapplyStylesForDeviceType:]):
        (nowPrinting):
        (-[WebCoreFrameBridge _setupRootForPrinting:]):
        (-[WebCoreFrameBridge computePageRectsWithPrintWidthScaleFactor:printHeight:]):
        (-[WebCoreFrameBridge copyDOMTree:]):
        (-[WebCoreFrameBridge URLWithAttributeString:]):
        (-[WebCoreFrameBridge unmarkAllMisspellings]):
        (-[WebCoreFrameBridge nextKeyView]):